NSM: fix SIGTERM handling via JNI native sigaction override
Replace the ineffective sun.misc.Signal proxy approach with a JNI native
library (libtuxguitar-nsm-jni.so) that installs a C-level sigaction(SIGTERM)
handler using a self-pipe trick.  SWT/GTK and FluidSynth override the JVM's
SIGTERM handler after startup, making Java-level signal registration invisible
to SIGTERM.  By installing our sigaction from NSMPlugin.connect() — after all
native plugins have loaded — we become the active handler and can route SIGTERM
through TuxGuitar's normal exit path (TGExitAction), so the "save before exit?"
dialog appears correctly when RaySession closes the session.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>